    syntax = "proto3";

    package prize;

    option java_package = "com.example.grpc";
    option java_outer_classname = "PrizeServiceProto";

    service PrizeService {
      // Query 1: Search by category and year range
      rpc SearchByCategoryAndYearRange(CategoryYearRangeRequest) returns (CategoryYearRangeResponse);

      // Query 2: Search by motivation keyword
      rpc SearchByMotivationKeyword(MotivationKeywordRequest) returns (MotivationKeywordResponse);

      // Query 3: Search by laureate name
      rpc SearchByLaureateName(LaureateNameRequest) returns (LaureateNameResponse);
    }

    message CategoryYearRangeRequest {
      string category = 1;
      int32 start_year = 2;
      int32 end_year = 3;
    }

    message CategoryYearRangeResponse {
      bool success = 1;
      string message = 2;
      int32 count = 3;
      repeated PrizeData prizes = 4;
    }

    message MotivationKeywordRequest {
      string keyword = 1;
    }

    message MotivationKeywordResponse {
      bool success = 1;
      string message = 2;
      int32 total_laureates = 3;
      repeated PrizeData prizes = 4;
    }

    message LaureateNameRequest {
      string first_name = 1;
      string last_name = 2;
    }

    message LaureateNameResponse {
      bool success = 1;
      string message = 2;
      int32 count = 3;
      repeated LaureateData laureates = 4;
    }

    message PrizeData {
      string key = 1;
      int32 year = 2;
      string category = 3;
      string laureates_json = 4;
    }

    message LaureateData {
      string key = 1;
      int32 year = 2;
      string category = 3;
      string motivation = 4;
      string first_name = 5;
      string last_name = 6;
    }
